# lance-bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: analyze_agent_prompt.md
.github/workflows/: analyze-results.yml  build-lance-python.yml  comment-monitor.yml  lint.yml  pr-benchmark-bot.yml  regression-report.yml  run-benchmarks.yml  run-dbpedia-recall.yml  run-fts-index-benchmark.yml  run-fts-index-postgres-benchmark.yml  run-python-benchmarks.yml  run-rust-benchmarks.yml
benchmarks/distributed_ivf_pq/: Cargo.toml  README.md
benchmarks/distributed_ivf_pq/src/: main.rs
benchmarks/many_frags_fts_search/: Cargo.toml  many-frags-fts-search-results.json
benchmarks/many_frags_fts_search/.cargo/: config.toml
benchmarks/many_frags_fts_search/src/: main.rs
benchmarks/pe_throughput/: Cargo.toml  REPORT.md
benchmarks/pe_throughput/src/: main.rs
benchmarks/scan/: Cargo.toml
benchmarks/scan/src/: input.rs  main.rs
benchmarks/scan/src/engines/: lance.rs  mod.rs  parquet.rs  parquet_async.rs  traits.rs  vortex.rs
benchmarks/take/: Cargo.toml
benchmarks/take/.cargo/: config.toml
benchmarks/take/src/: cache.rs  data.rs  main.rs  stats.rs
benchmarks/take/src/engines/: lance.rs  mod.rs  parquet.rs  parquet_async.rs  traits.rs  vortex.rs
benchmarks/train_fts_index/: Cargo.toml
benchmarks/train_fts_index/src/: main.rs
benchmarks/train_fts_index_postgres/: Cargo.toml  fts-index-postgres-results.json
benchmarks/train_fts_index_postgres/.cargo/: config.toml
benchmarks/train_fts_index_postgres/src/: main.rs
benchmarks/train_ivf_index/: Cargo.toml  ivf-index-results.json
benchmarks/train_ivf_index/src/: main.rs  memory.rs
docs/: bench-bot.md
scripts/: backfill_benchmarks.py  backfill_benchmarks.sh  compare_pr_benchmarks.py  merge_pr_results.py  plot_fts_progress.py  plot_ivf_progress.py  plot_slow_poll.py  post_pr_comment.py  process_pr_comment.py  publish_criterion.py  publish_dbpedia.py  publish_fts_index.py  publish_fts_index_postgres.py  publish_pytest.py  regression_report.py  schedule_benchmarks.py
