[package]
name = "many-frags-fts-search-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = { path="/home/pace/dev/lance/rust/lance" }
lance-index = { path="/home/pace/dev/lance/rust/lance-index" }
tokio = { version = "1.0", features = ["full"] }
arrow-array = "57"
arrow-schema = "57"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
indicatif = "0.17"
jemallocator = "0.5"
env_logger = "0.11"
rand = "0.8"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
