[package]
name = "scan-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = { path = "/home/pace/dev/lance/rust/lance" }
lance-io = { path = "/home/pace/dev/lance/rust/lance-io" }
lance-file = { path = "/home/pace/dev/lance/rust/lance-file" }
vortex = { version = "0.58", features = ["tokio"] }

tokio = { version = "1.0", features = ["full"] }
arrow = "57"
arrow-array = "57"
arrow-schema = "57"
arrow-csv = "57"
arrow-json = "57"
bytes = "1.1"
parquet = { version = "57", features = ["arrow", "async"] }
parking_lot = "0.12"
env_logger = "0.11"
futures = "0.3"
indicatif = "0.17"
anyhow = "1.0"
walkdir = "2.0"
libc = "0.2"
jemallocator = "0.5"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
