[package]
name = "train-fts-index-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
lance = { git = "https://github.com/lance-format/lance", rev = "7d8d8c57f526dbddb6f0228da2bae69e7bd43558" }
lance-index = { git = "https://github.com/lance-format/lance", rev = "7d8d8c57f526dbddb6f0228da2bae69e7bd43558" }
tokio = { version = "1.0", features = ["full"] }
arrow-array = "58"
arrow-schema = "58"
parquet = { version = "58", features = ["arrow"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1.0"
indicatif = "0.17"
jemallocator = "0.5"
libc = "0.2"
env_logger = "0.11"
tokio-metrics = "0.4"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
